import * as fs from 'fs/promises';
import { BadRequestError } from 'helpful-errors';
import * as os from 'os';
import * as path from 'path';
import { getError, given, then, when } from 'test-fns';

import { setStoneAsApproved } from './setStoneAsApproved';

const ASSETS_DIR = path.join(__dirname, '../.test/assets');

describe('setStoneAsApproved', () => {
  given('[case1] route.simple fixture', () => {
    const tempDir = path.join(
      os.tmpdir(),
      `test-set-approved-simple-${Date.now()}`,
    );

    beforeEach(async () => {
      await fs.cp(path.join(ASSETS_DIR, 'route.simple'), tempDir, {
        recursive: true,
      });
    });

    afterEach(async () => {
      await fs.rm(tempDir, { recursive: true, force: true });
    });

    when('[t0] stone is approved by human', () => {
      then('returns approved true', async () => {
        const result = await setStoneAsApproved(
          {
            stone: '1.vision',
            route: tempDir,
          },
          { isTTY: true },
        );
        expect(result.approved).toBe(true);
        expect(result.emit?.stdout).toContain('✓ approved');
      });

      then('output matches snapshot', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: true },
        );
        expect(result.emit?.stdout).toMatchSnapshot();
      });

      then('appends approval to passage.jsonl', async () => {
        await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: true },
        );
        const passagePath = path.join(tempDir, '.route', 'passage.jsonl');
        const content = await fs.readFile(passagePath, 'utf-8');
        expect(content).toContain('"stone":"1.vision"');
        expect(content).toContain('"status":"approved"');
      });
    });

    when('[t1] stone does not exist', () => {
      then('throws stone not found error', async () => {
        const error = await getError(
          setStoneAsApproved(
            { stone: 'nonexistent', route: tempDir },
            { isTTY: true },
          ),
        );
        expect(error).toBeInstanceOf(BadRequestError);
        expect(error.message).toContain('stone not found');
      });
    });
  });

  given('[case2] glob pattern match', () => {
    const tempDir = path.join(
      os.tmpdir(),
      `test-set-approved-glob-${Date.now()}`,
    );

    beforeEach(async () => {
      await fs.cp(path.join(ASSETS_DIR, 'route.simple'), tempDir, {
        recursive: true,
      });
    });

    afterEach(async () => {
      await fs.rm(tempDir, { recursive: true, force: true });
    });

    when('[t0] glob pattern matches stone', () => {
      then('approves matched stone', async () => {
        const result = await setStoneAsApproved(
          {
            stone: '1.*',
            route: tempDir,
          },
          { isTTY: true },
        );
        expect(result.approved).toBe(true);
      });
    });

    when('[t1] glob pattern matches no stone', () => {
      then('throws stone not found error', async () => {
        const error = await getError(
          setStoneAsApproved(
            { stone: '99.*', route: tempDir },
            { isTTY: true },
          ),
        );
        expect(error).toBeInstanceOf(BadRequestError);
        expect(error.message).toContain('stone not found');
      });
    });
  });

  given('[case3] caller is not human', () => {
    const tempDir = path.join(
      os.tmpdir(),
      `test-set-approved-nonhuman-${Date.now()}`,
    );

    beforeEach(async () => {
      await fs.cp(path.join(ASSETS_DIR, 'route.simple'), tempDir, {
        recursive: true,
      });
    });

    afterEach(async () => {
      await fs.rm(tempDir, { recursive: true, force: true });
    });

    when('[t0] isTTY is false', () => {
      then('approval fails with clear message', async () => {
        const result = await setStoneAsApproved(
          {
            stone: '1.vision',
            route: tempDir,
          },
          { isTTY: false },
        );
        expect(result.approved).toBe(false);
      });

      then('output contains "only humans can approve"', async () => {
        const result = await setStoneAsApproved(
          {
            stone: '1.vision',
            route: tempDir,
          },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toContain('only humans can approve');
      });

      then('output contains driver guidance', async () => {
        const result = await setStoneAsApproved(
          {
            stone: '1.vision',
            route: tempDir,
          },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toContain('as a driver, you should:');
        expect(result.emit?.stdout).toContain('--as passed');
        expect(result.emit?.stdout).toContain('--as arrived');
        expect(result.emit?.stdout).toContain('--as conceded');
        expect(result.emit?.stdout).toContain('--as disputed');
        expect(result.emit?.stdout).toContain('--as blocked');
      });

      then('output matches snapshot', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toMatchSnapshot();
      });
    });
  });

  given('[case4] stone already approved', () => {
    const tempDir = path.join(
      os.tmpdir(),
      `test-set-approved-already-${Date.now()}`,
    );

    beforeEach(async () => {
      await fs.cp(path.join(ASSETS_DIR, 'route.simple'), tempDir, {
        recursive: true,
      });
      // pre-approve the stone as human
      await setStoneAsApproved(
        { stone: '1.vision', route: tempDir },
        { isTTY: true },
      );
    });

    afterEach(async () => {
      await fs.rm(tempDir, { recursive: true, force: true });
    });

    when(
      '[t0] human tries to approve already-approved stone (idempotent)',
      () => {
        then('approval returns true (idempotent success)', async () => {
          const result = await setStoneAsApproved(
            { stone: '1.vision', route: tempDir },
            { isTTY: true },
          );
          expect(result.approved).toBe(true);
        });

        then('output contains "approved"', async () => {
          const result = await setStoneAsApproved(
            { stone: '1.vision', route: tempDir },
            { isTTY: true },
          );
          expect(result.emit?.stdout).toContain('approved');
        });

        then('output matches snapshot', async () => {
          const result = await setStoneAsApproved(
            { stone: '1.vision', route: tempDir },
            { isTTY: true },
          );
          expect(result.emit?.stdout).toMatchSnapshot();
        });
      },
    );

    when('[t1] bot tries to approve already-approved stone', () => {
      then('approval returns false', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.approved).toBe(false);
      });

      then('output contains "already approved"', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toContain('already approved');
      });

      then('output tells bot to run --as passed', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toContain('to continue, run:');
        expect(result.emit?.stdout).toContain('--as passed');
      });

      then('output does NOT contain "only humans can approve"', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.emit?.stdout).not.toContain('only humans can approve');
      });

      then('output matches snapshot', async () => {
        const result = await setStoneAsApproved(
          { stone: '1.vision', route: tempDir },
          { isTTY: false },
        );
        expect(result.emit?.stdout).toMatchSnapshot();
      });
    });
  });
});
